Implement sorting and filtering functionality for tasks

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,13 @@
         />
         <button type="submit">Add Task</button>
       </form>
+      <div id="filters" style="display: none">
+        <button id="sort-asc">Sort Ascending</button>
+        <button id="sort-desc">Sort Descending</button>
+        <button id="filter-completed">Show Completed</button>
+        <button id="filter-pending">Show Pending</button>
+        <button id="filter-all">Show All</button>
+      </div>
       <ul id="task-list"></ul>
     </div>
     <script src="js/script.js"></script>
