--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,19 @@
   <body>
     <div class="container">
       <h1>To-Do List</h1>
-      <form id="login-form">
-        <input type="text" id="username" placeholder="Username" required />
-        <input type="password" id="password" placeholder="Password" required />
-        <button type="submit">Login</button>
-      </form>
+      <div id="auth-container">
+        <form id="register-form">
+            <input type="text" id="register-username" placeholder="Username" required>
+            <input type="password" id="register-password" placeholder="Password" required>
+            <button type="submit">Register</button>
+          </form>
+          <form id="login-form">
+            <input type="text" id="login-username" placeholder="Username" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button type="submit">Login</button>
+          </form>
+        </div>
+      </div>
       <form id="task-form" style="display: none">
         <input
           type="text"
