--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,41 +4,106 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do List</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <div class="container">
-      <h1>To-Do List</h1>
+  <body class="bg-gray-100 flex justify-center items-center min-h-screen">
+    <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-md">
+      <h1 class="text-2xl font-bold mb-4 text-center">To-Do List</h1>
       <div id="auth-container">
-        <form id="register-form">
-            <input type="text" id="register-username" placeholder="Username" required>
-            <input type="password" id="register-password" placeholder="Password" required>
-            <button type="submit">Register</button>
-          </form>
-          <form id="login-form">
-            <input type="text" id="login-username" placeholder="Username" required>
-            <input type="password" id="login-password" placeholder="Password" required>
-            <button type="submit">Login</button>
-          </form>
-        </div>
+        <form id="register-form" class="mb-4">
+          <input
+            type="text"
+            id="register-username"
+            placeholder="Username"
+            class="border border-gray-400 p-2 rounded w-full mb-2"
+            required
+          />
+          <input
+            type="password"
+            id="register-password"
+            placeholder="Password"
+            class="border border-gray-400 p-2 rounded w-full mb-2"
+            required
+          />
+          <button
+            type="submit"
+            class="bg-blue-500 text-white p-2 rounded w-full"
+          >
+            Register
+          </button>
+        </form>
+        <form id="login-form">
+          <input
+            type="text"
+            id="login-username"
+            placeholder="Username"
+            class="border border-gray-400 p-2 rounded w-full mb-2"
+            required
+          />
+          <input
+            type="password"
+            id="login-password"
+            placeholder="Password"
+            class="border border-gray-400 p-2 rounded w-full mb-2"
+            required
+          />
+          <button
+            type="submit"
+            class="bg-blue-500 text-white p-2 rounded w-full"
+          >
+            Login
+          </button>
+        </form>
       </div>
-      <form id="task-form" style="display: none">
+      <form id="task-form" class="hidden mb-4">
         <input
           type="text"
           id="task-input"
           placeholder="Add a new task"
+          class="border border-gray-400 p-2 rounded w-full mb-2"
           required
         />
-        <button type="submit">Add Task</button>
+        <button
+          type="submit"
+          class="bg-green-500 text-white p-2 rounded w-full"
+        >
+          Add Task
+        </button>
       </form>
-      <div id="filters" style="display: none">
-        <button id="sort-asc">Sort Ascending</button>
-        <button id="sort-desc">Sort Descending</button>
-        <button id="filter-completed">Show Completed</button>
-        <button id="filter-pending">Show Pending</button>
-        <button id="filter-all">Show All</button>
+      <div id="filters" class="hidden mb-4">
+        <button
+          id="sort-asc"
+          class="bg-gray-300 text-gray-700 p-2 rounded mr-2"
+        >
+          Sort Ascending
+        </button>
+        <button
+          id="sort-desc"
+          class="bg-gray-300 text-gray-700 p-2 rounded mr-2"
+        >
+          Sort Descending
+        </button>
+        <button
+          id="filter-completed"
+          class="bg-gray-300 text-gray-700 p-2 rounded mr-2"
+        >
+          Show Completed
+        </button>
+        <button
+          id="filter-pending"
+          class="bg-gray-300 text-gray-700 p-2 rounded mr-2"
+        >
+          Show Pending
+        </button>
+        <button id="filter-all" class="bg-gray-300 text-gray-700 p-2 rounded">
+          Show All
+        </button>
       </div>
-      <ul id="task-list"></ul>
+      <ul id="task-list" class="list-disc pl-4"></ul>
     </div>
     <script src="js/script.js"></script>
   </body>
